update BookController and BookTrackerController to use ResponseEntity
- updated controllers methods to return ResponseEntity for better HTTP response control

- ensure consistent use of HTTP status codes across all methods